test/files/pos/existential-java-case-class/J.java
public class J<T extends String> {}
