test/files/neg/raw-types-stubs/M_1.java
public class M_1<K extends String> { }


